# semestr1_lab2_1

./: .gitignore  CMakeLists.txt  main.c
